--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ tr:nth-child(even) {
   position: relative;
   display: inline-block;
   border-bottom: 1px solid blue;
-  font-size: 16px;
+  font-size: 12px;
   font-family: 'Noto Sans Mono', monospace;
   border: 1px solid white;
   color: white;
@@ -174,7 +174,7 @@ tr:nth-child(even) {
 }
 
 .menu {
-  font-size: 16px;
+  font-size: 12px;
   font-family: 'Noto Sans Mono', monospace;
   border: 1px solid #8bc34a;
   color: white;
@@ -192,6 +192,7 @@ tr:nth-child(even) {
 
 .logo {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  margin: 15px;
 }
 
 footer {
