--- a/css/main.css
+++ b/css/main.css
@@ -187,7 +187,7 @@ tr:nth-child(even) {
   background-color: #383838;
   color: #FFA500;
   opacity: 1.5;
-  border: 1px solid white;
+  border: 1px solid lightgray;
 }
 
 .logo {
