changed text size on index

--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ h2 {
 h3 {
   font-family: 'Noto Sans Mono', monospace;
   font-size: 15px;
-  color: orange;
+  color: white;
   margin: auto;
   text-align: center;
 }
