--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ tr:nth-child(even) {
   border: 1px solid lightgray;
 }
 
-.logoshadow {
+.shadow {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   margin: 15px;
 }
