fixed logo shadow and css for shop

--- a/css/shop.css
+++ b/css/shop.css
@@ -206,8 +206,12 @@ tr:nth-child(even) {
   border: 1px solid #8bc34a;
 }
 
-.logo {
+.shadow {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  margin: 15px;
+}
+
+.logo {
   margin: 15px;
 }
 
