--- a/css/shop.css
+++ b/css/shop.css
@@ -20,16 +20,15 @@ a:visited {
 }
 
 a:hover {
-  color: #8bc34a;
+  color: #00ff00;
 }
 
 body {
   font-family: 'Noto Sans Mono', monospace;
   text-align: center;
   color: white;
-  padding-top: 80;
+  padding-top: 15px;
   margin-bottom: 15px;
-  padding-bottom: 80px;
 }
 
 h1 {
@@ -52,7 +51,7 @@ h2 {
 h3 {
   font-family: 'Noto Sans Mono', monospace;
   font-size: 15px;
-  color: lime;
+  color: #00ff00;
   margin: auto;
   text-align: center;
 }
@@ -77,7 +76,7 @@ h5 {
 
 ul {
   list-style-type: square;
-  border: 1px solid #8bc34a;
+  border: 1px solid #00ff00;
   width: 45%;
   margin: auto;
   text-align: left;
@@ -105,14 +104,19 @@ notice {
 
 div {
   font-family: 'Noto Sans Mono', monospace;
-  color: white;
-  display: inline-block;
   align-content: center;
 }
 
-  .price{
+.main {
+  margin: auto;
+  max-width: 80%;
+  text-align: center;
+  padding-top: 50px;
+}
+
+  .price {
     font-family: 'Noto Sans Mono', monospace;
-    color: lime;
+    color: #00ff00;
   }
 
   .product {
@@ -120,7 +124,7 @@ div {
     color: white;
     display: inline-block;
     border-radius: 15px;
-    border: 1.5px solid #8bc34a;
+    border: 1.5px solid #00ff00;
     padding: 10px;
     max-width: 306px;
 }
@@ -137,9 +141,9 @@ div {
 
 .productbtn:hover {
   background-color: #383838;
-  color: #8bc34a;
+  color: #00ff00;
   opacity: 1.5;
-  border: 1px solid #8bc34a;
+  border: 1px solid #00ff00;
 }
 
 table {
@@ -208,20 +212,29 @@ tr:nth-child(even) {
 }
 
 .menu {
+  background-color: #383838;
   font-size: 15px;
   font-family: 'Noto Sans Mono', monospace;
-  border: 1px solid white;
+  border: 1px solid #00ff00;
   color: white;
-  background-color: #383838;
   padding: 16px 32px;
   margin: 4px 2px;
 }
 
 .menu:hover {
-  background-color: #383838;
-  color: #8bc34a;
-  opacity: 1.5;
-  border: 1px solid #8bc34a;
+  background-color: transparent;
+  color: #00ff00;
+  border: 1px solid #00ff00;
+}
+
+.pagehere {
+  font-size: 15px;
+  font-family: 'Noto Sans Mono', monospace;
+  background-color: transparent;
+  color: #00ff00;
+  padding: 16px 32px;
+  margin: 4px 2px;
+  border: 1px solid #00ff00;
 }
 
 .shadow {
