--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body {
 
 h1 {
   font-family: 'Noto Sans Mono', monospace;
-  font-size: 30px;
+  font-size: 50px;
   color: white;
   margin: auto;
   text-align: center;
@@ -259,20 +259,20 @@ footer {
 }
 
 .printacc:after {
-  content: '\2193';
+  content: "\1F80B";
   font-weight: bold;
   float: right;
 }
 
 .active:after {
-  content: "\2191";
+  content: '\1F809';
   text-shadow: 2px 2px 4px black;
 }
 
 .printpanel {
   padding: 0 18px;
   max-height: 0;
-  font-size: 12px;
+  font-size: 13px;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   max-width: 600px;
