--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ h1 {
 
 h2 {
   font-family: 'Noto Sans Mono', monospace;
-  font-size: 20px;
+  font-size: 25px;
   color: white;
   margin: auto;
   text-align: center;
@@ -207,6 +207,7 @@ tr:nth-child(even) {
 .pagehere {
   font-size: 15px;
   font-family: 'Noto Sans Mono', monospace;
+  background-image: linear-gradient(transparent,#383838);
   background-color: transparent;
   color: #00ff00;
   padding: 16px 32px;
