--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,35 @@ tr:nth-child(even) {
   border: 1px solid #00ff00;
 }
 
+.smenu {
+  background-color: #383838;
+  font-size: 12px;
+  font-family: 'Noto Sans Mono', monospace;
+  border: 1px solid #00ff00;
+  color: white;
+  padding: 10px 18px;
+  margin: 2px 1px;
+  position: relative;
+  display: inline-block;
+}
+
+.smenu-content {
+  display: none;
+  position: relative;
+  background-color: #f9f9f9;
+  min-width: 115px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.smenu:hover .smenu-content {
+  background-color: transparent;
+  color: #00ff00;
+  border: 1px solid #00ff00;
+  display: block;
+}
+
 .pagehere {
   font-size: 15px;
   font-family: 'Noto Sans Mono', monospace;
